fix: kanban should fill all space on mobile

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -662,6 +662,8 @@ body {
         -webkit-overflow-scrolling: touch;
         width: auto;
         min-width: 100%;
+        min-height: 100%;
+        align-items: stretch;
     }
 
     .kanban-column {
